--- a/playbook.yml
+++ b/playbook.yml
@@ -140,7 +140,7 @@
     - name: Install Apps with brew-cask
       shell: echo brew cask install {{ item }}
       with_items: "{{ applications }}"
-      when: item not in installed_applications
+      when: item not in installed_applications.results
       #when: "{{ item not in installed_applications.results|map(attribute='stdout') }}"
 
 
