--- a/playbook.yml
+++ b/playbook.yml
@@ -132,7 +132,7 @@
     ### APPS
 
     - name: Check for installed apps(casks)
-      shell: brew cask list | grep {{ item }}
+      shell: brew cask list | grep -w {{ item }}
       register: installed_applications
       with_items: "{{ applications }}"
       ignore_errors: true
